misc - fixed overflow text on object titles

--- a/app/assets/sass/dri/dri.scss
+++ b/app/assets/sass/dri/dri.scss
@@ -2309,7 +2309,7 @@ p.dri_rss_link a {
 
 .dri_object_title_top {
   font-size: 110%;
-  padding: 6px 20px 4px 10px;
+  padding: 1px 20px 4px 10px;
   margin: 10px 0 10px 0;
   height: 26px;
   text-overflow: ellipsis;
@@ -2318,6 +2318,7 @@ p.dri_rss_link a {
   background-color: $dri_grey;
   width: 73%;
   font-weight: bold;
+  line-height: 26px
 }
 
 /*-------------- Media asset/ Multiple Media Assets Carousel --------------*/
